<resources>
    <string name="app_name">Login and Register V2</string>
    <string name="welcome">Welcome,</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</string>
    <string name="get_started">Get started</string>
    <string name="sentence_welcome">We\'re delighted to have you on board. Start your journey by logging in or creating a new account.</string>
    <string name="desc_register">Hello, I guest you are new around here. You can start using the application after sign up.</string>
    <string name="desc_login">I am happy to see you again. You can continue where you left off by logging in.</string>
    <string name="welcome_register">Welcome 🖐</string>
    <string name="welcome_login">Welcome Back 🖐</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>