<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cosmic_latte"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:background="@drawable/artboard"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                <TextView
                        android:text="@string/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="34sp"
                        android:layout_marginStart="24dp"
                        android:fontFamily="@font/outfit_medium"
                        android:textColor="@color/federal_blue"/>
                <TextView
                        android:text="@string/sentence_welcome"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="inherit"
                        android:layout_marginStart="50dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/outfit_regular"
                        android:textColor="@color/federal_blue"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:layout_marginBottom="150dp">
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/federal_blue"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp"
                tools:ignore="MissingConstraints">
            <Button
                    android:id="@+id/button_Splash"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/outfit_regular"
                    android:textAllCaps="false"
                    android:text="@string/get_started"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>